--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eslint": "^8.47.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.1",
-    "jest": "^29.6.4",
+    "jest": "^29.0.0",
     "jest-cli": "^29.6.4",
     "plop": "^4.0.1"
   },
@@ -27,7 +27,8 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "test": "jest",
+    "test": "NODE_OPTIONS=--openssl-legacy-provider jest",
+    "test:watch": "jest --watch",
     "generate": "plop"
   },
   "eslintConfig": {
@@ -36,6 +37,11 @@
   "jest": {
     "testPathIgnorePatterns": [
       "generators/"
-    ]
+    ],
+    "testEnvironment": "node",
+    "verbose": true,
+    "moduleDirectories": ["node_modules"],
+    "roots": ["."],
+    "testMatch": ["**/?(*.)+(spec|test).[jt]s?(x)"]
   }
 }
